--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </context-param>
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
-        <param-value>le-frog</param-value>  
+        <param-value>excite-bike</param-value>  
     </context-param>  
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
